Body has been made wider so that text is no longer narrow and sections of code are not cut off.

--- a/src/_static/custom.css
+++ b/src/_static/custom.css
@@ -1,5 +1,14 @@
+div.document {
+
+	width: 1200px;
+}
+
 body {
 	font-family: Helvetica, Verdana;
+}
+
+div.body {
+	max-width: 1200px;
 }
 
 div.body h1,
